test/spec_vectors/simd_conversions/fail/module_34.wat
(module (func (result v128) (f32x4.convert_i32x4_u (i64.const 0))))